fix: missing margin declaration

--- a/src/app/rating-front/rating-front.component.scss
+++ b/src/app/rating-front/rating-front.component.scss
@@ -120,5 +120,6 @@
 
   .submit-button {
     padding: 11px 0;
+    margin-top: 32px;
   }
 }
